Bug 252383 - Taskbar crashed while using XMMS
Summary: Taskbar crashed while using XMMS
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-taskbar (other bugs)
Version First Reported In: unspecified
Platform: Unlisted Binaries Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-25 22:57 UTC by Clemens Eisserer
Modified: 2010-09-26 21:06 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Clemens Eisserer 2010-09-25 22:57:26 UTC
Version:           unspecified
OS:                Linux

While using xmms (as far as I remember I pressed the "STOP"-Button) plasma crashed.


Thread 1 (Thread 0xb78249b0 (LWP 1729)):
[KCrash Handler]
#7  0x008fc832 in _dl_sysinfo_int80 () from /lib/ld-linux.so.2
#8  0x00948d11 in raise (sig=6) at ../nptl/sysdeps/unix/sysv/linux/raise.c:64
#9  0x0094a5ea in abort () at abort.c:92
#10 0x002f6397 in __gnu_cxx::__verbose_terminate_handler () at ../../../../libstdc++-v3/libsupc++/vterminate.cc:93
#11 0x002f4226 in __cxxabiv1::__terminate (handler=0x2f6230 <__gnu_cxx::__verbose_terminate_handler()>) at ../../../../libstdc++-v3/libsupc++/eh_terminate.cc:38
#12 0x002f4263 in std::terminate () at ../../../../libstdc++-v3/libsupc++/eh_terminate.cc:48
#13 0x002f4e56 in __cxxabiv1::__cxa_pure_virtual () at ../../../../libstdc++-v3/libsupc++/pure.cc:50
#14 0x01ebe09b in TaskItemLayout::size (this=0xa3ee9e0) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskitemlayout.cpp:177
#15 0x01ebe250 in TaskItemLayout::gridLayoutSize (this=0xa3ee9e0) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskitemlayout.cpp:250
#16 0x01ebe31a in TaskItemLayout::layoutItems (this=0xa3ee9e0) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskitemlayout.cpp:275
#17 0x01ebecbb in TaskItemLayout::remove (this=0xa3ee9e0, item=0x9bc32b0) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskitemlayout.cpp:160
#18 0x01ebee0d in TaskItemLayout::removeTaskItem (this=0xa3ee9e0, item=0x9bc32b0) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskitemlayout.cpp:110
#19 0x01ecb904 in TaskGroupItem::itemRemoved (this=0xa432108, groupableItem=0x9be3380) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/applets/tasks/taskgroupitem.cpp:527
#20 0x01ecd019 in TaskGroupItem::qt_metacall (this=0xa432108, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfbd8068)
    at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/plasma/desktop/applets/tasks/taskgroupitem.moc:123
#21 0x0215cecb in QMetaObject::metacall (object=0xa432108, cl=QMetaObject::InvokeMetaMethod, idx=48, argv=0xbfbd8068) at kernel/qmetaobject.cpp:237
#22 0x0216f2dd in QMetaObject::activate (sender=0x96f7c00, m=0x3466540, local_signal_index=1, argv=0xbfbd8068) at kernel/qobject.cpp:3272
#23 0x0344f024 in TaskManager::TaskGroup::itemRemoved (this=0x96f7c00, _t1=0x9be3380) at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/libs/taskmanager/taskgroup.moc:156
#24 0x0344fc2b in TaskManager::TaskGroup::remove (this=0x96f7c00, item=0x9be3380) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/taskgroup.cpp:267
#25 0x03450eb2 in TaskManager::TaskGroup::add (this=0x9882cb0, item=0x9be3380) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/taskgroup.cpp:182
#26 0x0343ca66 in TaskManager::AbstractGroupingStrategy::closeGroup (this=0xa3ef958, group=0x96f7c00) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/abstractgroupingstrategy.cpp:167
#27 0x03443d6c in TaskManager::ProgramGroupingStrategy::checkGroup (this=0xa3ef958) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/strategies/programgroupingstrategy.cpp:245
#28 0x03444b0d in TaskManager::ProgramGroupingStrategy::qt_metacall (this=0xa3ef958, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfbd8328)
    at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/libs/taskmanager/programgroupingstrategy.moc:76
#29 0x0215cecb in QMetaObject::metacall (object=0xa3ef958, cl=QMetaObject::InvokeMetaMethod, idx=8, argv=0xbfbd8328) at kernel/qmetaobject.cpp:237
#30 0x0216f2dd in QMetaObject::activate (sender=0x96f7c00, m=0x3466540, local_signal_index=1, argv=0xbfbd8328) at kernel/qobject.cpp:3272
#31 0x0344f024 in TaskManager::TaskGroup::itemRemoved (this=0x96f7c00, _t1=0xa2e6bc8) at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/libs/taskmanager/taskgroup.moc:156
#32 0x0344f39c in TaskManager::TaskGroup::itemDestroyed (this=0x96f7c00, item=0xa2e6bc8) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/taskgroup.cpp:218
#33 0x0345122f in TaskManager::TaskGroup::qt_metacall (this=0x96f7c00, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0xbfbd8488)
    at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/libs/taskmanager/taskgroup.moc:136
#34 0x0215cecb in QMetaObject::metacall (object=0x96f7c00, cl=QMetaObject::InvokeMetaMethod, idx=43, argv=0xbfbd8488) at kernel/qmetaobject.cpp:237
#35 0x0216f2dd in QMetaObject::activate (sender=0xa2e6bc8, m=0x3465464, local_signal_index=1, argv=0xbfbd8488) at kernel/qobject.cpp:3272
#36 0x0343b384 in TaskManager::AbstractGroupableItem::destroyed (this=0xa2e6bc8, _t1=0xa2e6bc8)
    at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/libs/taskmanager/abstractgroupableitem.moc:135
#37 0x0343b89e in TaskManager::AbstractGroupableItem::~AbstractGroupableItem (this=0xa2e6bc8, __in_chrg=<value optimized out>)
    at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/abstractgroupableitem.cpp:68
#38 0x03452c93 in TaskManager::TaskItem::~TaskItem (this=0xa2e6bc8, __in_chrg=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/taskitem.cpp:74
#39 0x03452cc3 in TaskManager::TaskItem::~TaskItem (this=0xa2e6bc8, __in_chrg=<value optimized out>) at /usr/src/debug/kdebase-workspace-4.5.1/libs/taskmanager/taskitem.cpp:74
#40 0x02167f26 in qDeleteInEventHandler (o=0xa2e6bc8) at kernel/qobject.cpp:3980
#41 0x02169d30 in QObject::event (this=0xa2e6bc8, e=0xa28f7d8) at kernel/qobject.cpp:1194
#42 0x043a647c in QApplicationPrivate::notify_helper (this=0x82eb288, receiver=0xa2e6bc8, e=0xa28f7d8) at kernel/qapplication.cpp:4396
#43 0x043aca26 in QApplication::notify (this=0x82d7660, receiver=0xa2e6bc8, e=0xa28f7d8) at kernel/qapplication.cpp:3798
#44 0x04ec6ccb in KApplication::notify (this=0x82d7660, receiver=0xa2e6bc8, event=0xa28f7d8) at /usr/src/debug/kdelibs-4.5.1/kdeui/kernel/kapplication.cpp:310
#45 0x02157ae3 in QCoreApplication::notifyInternal (this=0x82d7660, receiver=0xa2e6bc8, event=0xa28f7d8) at kernel/qcoreapplication.cpp:732
#46 0x0215b693 in sendEvent (receiver=0x0, event_type=0, data=0x82c1e38) at kernel/qcoreapplication.h:215
#47 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x82c1e38) at kernel/qcoreapplication.cpp:1373
#48 0x0215b84e in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0) at kernel/qcoreapplication.cpp:1266
#49 0x02182a15 in sendPostedEvents (s=0x82ed510) at kernel/qcoreapplication.h:220
#50 postEventSourceDispatch (s=0x82ed510) at kernel/qeventdispatcher_glib.cpp:277
#51 0x00b76525 in g_main_dispatch (context=0x82ed490) at gmain.c:1960
#52 IA__g_main_context_dispatch (context=0x82ed490) at gmain.c:2513
#53 0x00b7a268 in g_main_context_iterate (context=0xae8490, block=1, dispatch=1, self=0x82eaf40) at gmain.c:2591
#54 0x00b7a449 in IA__g_main_context_iteration (context=0x82ed490, may_block=1) at gmain.c:2654
#55 0x021824f6 in QEventDispatcherGlib::processEvents (this=0x82c19d0, flags=...) at kernel/qeventdispatcher_glib.cpp:415
#56 0x04456706 in QGuiEventDispatcherGlib::processEvents (this=0x82c19d0, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#57 0x0215665a in QEventLoop::processEvents (this=0xbfbd8cd4, flags=...) at kernel/qeventloop.cpp:149
#58 0x021569ba in QEventLoop::exec (this=0xbfbd8cd4, flags=...) at kernel/qeventloop.cpp:201
#59 0x0215b917 in QCoreApplication::exec () at kernel/qcoreapplication.cpp:1009
#60 0x043a5458 in QApplication::exec () at kernel/qapplication.cpp:3672
#61 0x0354e050 in kdemain (argc=1, argv=0xbfbd8ee4) at /usr/src/debug/kdebase-workspace-4.5.1/plasma/desktop/shell/main.cpp:118
#62 0x0804879c in main (argc=1, argv=0xbfbd8ee4) at /usr/src/debug/kdebase-workspace-4.5.1/i686-redhat-linux-gnu/plasma/desktop/shell/plasma-desktop_dummy.cpp:3


Reproducible: Didn't try
Comment 1 Beat Wolf 2010-09-26 09:28:08 UTC
what kde version are you using?
Comment 2 Clemens Eisserer 2010-09-26 09:48:07 UTC
Sorry, I forgot to provide the information. Its 4.5.1, as you can see from the stacktrace: "kdebase-workspace-4.5.1"
Comment 3 Aaron J. Seigo 2010-09-26 21:06:55 UTC
SVN commit 1180012 by aseigo:

* move some slots to the private class
* delay the signalling from the group that items have been removed; this allows the items to fully delete, preventing possible usage of the item object when it is only half-destructed (and therefore a AbstractGroupableItem with pure virtuals)

a little too invasive to backport without more testing
BUG:252383


 M  +28 -9     taskgroup.cpp  
 M  +4 -4      taskgroup.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1180012