* move some slots to the private class * delay the signalling from the group that items have been removed; this allows the items to fully delete, preventing possible usage of the item object when it is only half-destructed (and therefore a AbstractGroupableItem with pure virtuals)

a little too invasive to backport without more testing
BUG:252383

svn path=/trunk/KDE/kdebase/workspace/; revision=1180012